# navidrome-music-player

./: .gitignore  README.md  main.py  pyproject.toml
controllers/: login_controller.py
utils/: hasher.py
views/: login.py  songlist.py  ui.py
